tests/miz/fail/resolve/fail_resolve_duplicate_theorem_symbol_001.miz
theorem Clash: thesis;
theorem Clash: thesis;
